--- a/src/app/primary-page/menu-gates/gates.component.html
+++ b/src/app/primary-page/menu-gates/gates.component.html
@@ -14,14 +14,14 @@
 <!--Below are template symbols for the gate images-->
 <svg style="width:0 ; height:0">
     <symbol id="and">
-        <path stroke="#000" fill="#FFFFFF" stroke-linecap="square"
+        <path stroke="#000" fill="none" stroke-linecap="square" style="stroke-width: 2px"
             d="m44 44.094h-19v-25.998l19-0.002c7.176 0 13 5.824 13 13s-5.824 13-13 13zm13-13h9.056m-50.056-6.5h9m-9 13h9" />
     </symbol>
 </svg>
 
 <svg style="width:0 ; height:0">
     <symbol id="or">
-        <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="#FFFFFF">
+        <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#000000">
             <path d="M1318 3574 c-13 -28 -15 -18 45 -220 19 -66 39 -137 42 -157 l7 -37
                 -664 0 c-503 0 -667 -3 -676 -12 -18 -18 -14 -63 6 -81 17 -16 79 -17 690 -17
                 l672 0 5 -22 c42 -183 57 -538 31 -735 -9 -68 -21 -145 -27 -173 l-11 -50
@@ -132,11 +132,11 @@
     <symbol id="buffer">
         <g id="layer1" inkscape:label="Layer 1" inkscape:groupmode="layer" transform="translate(-170.71 -468.58)">
             <g id="g3009" transform="translate(-109.29 77.143)">
-                <path id="path2999" d="m320 392.36v40l30-20z" style="stroke:#000000;stroke-width:1px;fill:none"
+                <path id="path2999" d="m320 392.36v40l30-20z" style="stroke:#000000;stroke-width:3px;fill:none"
                     inkscape:connector-curvature="0" />
-                <path id="path3001" d="m320 412.36h-40" style="stroke:#000000;stroke-width:1px;fill:none"
+                <path id="path3001" d="m320 412.36h-40" style="stroke:#000000;stroke-width:3px;fill:none"
                     inkscape:connector-curvature="0" />
-                <path id="path3003" d="m350 412.36h40" style="stroke:#000000;stroke-width:1px;fill:none"
+                <path id="path3003" d="m350 412.36h40" style="stroke:#000000;stroke-width:3px;fill:none"
                     inkscape:connector-curvature="0" />
             </g>
         </g>
