--- a/src/app/account-page/account-page-layout.component.html
+++ b/src/app/account-page/account-page-layout.component.html
@@ -6,7 +6,7 @@
             <h2>Sign up and start saving your progress</h2>
         </div>
 
-        <div class="card-body">
+       <div class="card-body">
             <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
 
                 <div class="input-group mb-3">
@@ -34,7 +34,7 @@
             </form>
 
         </div>
-    </div>
+   </div>
 
     <div class="card" style="width: 25rem;">
 
@@ -66,15 +66,6 @@
         </div>
     </div>
 
-
-    <div class="card" style="width: 12rem;">
-        <div class="card-body">
-            <div class="d-flex justify-content-between">
-                <a href="#" class="btn btn-primary"> View Saved Circuits</a>
-            </div>
-        </div>
-    </div>
-
 </div>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -87,7 +78,13 @@
 
             <div class="modal-body" id="body">
                 <div class="row">
-                    <img src="assets/images/and_gate.jpg" alt="and_gate" style="width:100px;height:100px">
+                    <img src="assets/logic-gates/AND_gate.svg" alt="and_gate" style="width:70px;height:50px">
+                    <img src="assets/logic-gates/Buffer_gate.svg" alt="buffer_gate" style="width:70px;height:50px">
+                    <img src="assets/logic-gates/NAND_gate.svg" alt="nand_gate" style="width:70px;height:50px">
+                    <img src="assets/logic-gates/NOR_gate.svg" alt="nor_gate" style="width:70px;height:50px">
+                    <img src="assets/logic-gates/NOT_gate.svg" alt="not_gate" style="width:70px;height:50px">
+                    <img src="assets/logic-gates/OR_gate.svg" alt="or_gate" style="width:70px;height:50px">
+                    <img src="assets/logic-gates/XOR_gate.svg" alt="xor_gate" style="width:70px;height:50px">
                 </div>
             </div>
 
@@ -99,3 +96,4 @@
         </div>
     </div>
 </div>
+
