Updated page routings and logic module

--- a/src/app/logic-gates-module/logic-gates/gate-info-card/gate-info-card.component.css
+++ b/src/app/logic-gates-module/logic-gates/gate-info-card/gate-info-card.component.css
@@ -10,9 +10,13 @@
     height: 25rem;
 }
 
+.card-text {
+    font-size: medium;
+}
+
 .table {
-    height: 16rem;
-    width: 16rem;
+    height: 18rem;
+    width: 18rem;
 }
 
 .btn-primary {
