--- a/src/app/logic-gates-module/practice-layout/practice.component.html
+++ b/src/app/logic-gates-module/practice-layout/practice.component.html
@@ -1,14 +1,38 @@
-<body>
-    <div>
+<div class="layout container-fluid">
+    <div class="practice">
         <h1>Logic Gate Practice Problems</h1>
         <h2>Question 1: </h2>
         <h3></h3>
-        <h2>Question 2: </h2>
-        <h2>Question 3: </h2>
-    </div>
-    <div>
-        <h1>Logic Gate Quiz</h1>
-        <p></p>
-    </div>
+        <div>
 
-</body>
+        </div>
+        <h2>Question 2: </h2>
+        <h3></h3>
+        <div>
+
+        </div>
+        <h2>Question 3: </h2>
+        <h3>Examine the image below. If A is 1, B is 0, and C is 0, what will the output Q be?</h3>
+        <img src="/assets/logic-problems/CPT-logic-gate_ex1.svg">
+        <div>
+
+        </div>
+        <h2>Question 4: </h2>
+        <h3></h3>
+        <img src="/assets/logic-problems/CPT-logic-gate_ex2.svg">
+        <div>
+
+        </div>
+        <h2>Question 5: </h2>
+        <h3></h3>
+        <img src="/assets/logic-problems/CPT-logic-gate_ex3.svg">
+        <div>
+
+        </div>
+        <div class="quiz">
+            <h2>When you're ready for the quiz click the button below!</h2>
+            <button class="btn btn-primary mt-0"><a routerLink="/logic-gates/quiz">Go to the Quiz</a></button>
+        </div>
+    </div>
+    <p>Logic gate images credit to Arturo Urquizo from https://commons.wikimedia.org/</p>
+</div>
