--- a/src/app/logic-gates-module/logic-gates/gate-info-card/gate-info-card.component.html
+++ b/src/app/logic-gates-module/logic-gates/gate-info-card/gate-info-card.component.html
@@ -6,8 +6,8 @@
     <div class="d-flex justify-content-center">
       <button class="btn btn-primary mt-0" (click)="showTables()">See Truth Table</button>
     </div>
-    <div *ngIf="showTable">
-      <img class="table" src={{table}} alt="table image">
-    </div>
   </div>
+</div>
+<div *ngIf="showTable" class="d-flex justify-content-center">
+  <img class="table" src={{table}} alt="table image">
 </div>
