--- a/src/app/logic-gates-module/logic-gates/logic-gates-layout/logic-gates-layout.component.html
+++ b/src/app/logic-gates-module/logic-gates/logic-gates-layout/logic-gates-layout.component.html
@@ -22,7 +22,8 @@
     </div>
     <div class="practice">
         <h2>When you're ready for some practice click the button below!</h2>
-        <button class="btn btn-primary mt-0"><a routerLink="/logic-gates/practice">Go to Practice Problems</a></button>
+        <button class="btn btn-primary mt-0" (click)="showPracticeProblems()">Show Practice Problems</button>
     </div>
+    <div #ngIf(showPracticeProblems)></div>
     <app-main-footer></app-main-footer>
 </div>
