--- a/src/app/nav-bars/main-header/main-header.component.html
+++ b/src/app/nav-bars/main-header/main-header.component.html
@@ -8,21 +8,24 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+          <a class="nav-link active text-white" aria-current="page" href="#">Circuit Canvas</a>
+        </li>
+        <li>
+          <a class="nav-link text-white" routerLink="/binary-numbers">Binary Numbers Module</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" routerLink="/logic-gates">Logic Gates Module</a>
         </li>
         <li>
-          <a class="nav-link text-white" href="Account">Account</a>
+          <a class="nav-link text-white" routerLink="/noise-margins">Noise Margins Module</a>
         </li>
         <li>
-          <a class="nav-link text-white" routerLink="/Modules">Modules</a>
+          <a class="nav-link text-white" routerLink="/transistors">Transistors Module</a>
+        </li>
+        <li>
+          <a class="nav-link text-white" href="account" rounterLink="/account">Account</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      </form>
     </div>
   </div>
 </nav>
