--- a/src/app/logic-gates-module/practice-layout/practice.component.html
+++ b/src/app/logic-gates-module/practice-layout/practice.component.html
@@ -30,9 +30,8 @@
 
         </div>
         <div class="quiz">
-            <h2>When you're ready for the quiz click the button below!</h2>
-            <button class="btn btn-primary mt-0"><a routerLink="/logic-gates/quiz">Go to the Quiz</a></button>
+            <h2>When you're ready for a challenge click the button below!</h2>
+            <button class="btn btn-primary mt-0"><a routerLink="/logic-gates/quiz">Go for the Quiz</a></button>
         </div>
     </div>
-    <p>Logic gate images credit to Arturo Urquizo from https://commons.wikimedia.org/</p>
 </div>
