--- a/src/app/primary-page/menu-gates/gates.component.css
+++ b/src/app/primary-page/menu-gates/gates.component.css
@@ -1,16 +1,22 @@
-.type{
+.type {
+    margin-top: .1in;
     text-align: center;
+    font-weight: bold;
 }
-.picture{
+
+.picture {
     position: relative;
     /* width: 150px; */
     height: 50px;
 }
-div, img{
+
+div,
+img {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    margin-bottom: .1in;
 }
