--- a/src/app/primary-page/primary-page.component.css
+++ b/src/app/primary-page/primary-page.component.css
@@ -1,33 +1,47 @@
-.header{
+.canvas-heading {
+    margin-top: .5in;
+    margin-bottom: .5in;
     text-align: center;
 }
-.gate-list{
-    position:absolute;
+
+.menu-title {
+    color: white;
+    margin-top: .1in;
+
+}
+
+.gate-list {
+    position: absolute;
     display: inline-block;
-    width: 15%;
+    width: 2.5in;
     height: 500px;
     text-align: center;
-    background-color: gray;
+    background-color: darkslategrey;
     overflow-y: scroll;
     overflow-x: none;
+    margin-left: .5in;
 }
-.board{
+
+.board {
     position: absolute;
     display: inline-block;
     text-align: center;
-    background-color: bisque;
+    background-color: linen;
+    border-radius: .5in;
+    border: 4px solid darkslategray;
     width: 50%;
     height: 500px;
 }
-.gates{
+
+.gates {
     display: flex;
-    border: 1px solid black;
+    border: 4px solid darkslategray;
     background-color: #D4D9D8;
     justify-content: center;
 }
 
 /* Stops the entire document from being selected when the image is dragged */
-body{
+body {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
