--- a/src/app/module-list-page/module-list-page.component.html
+++ b/src/app/module-list-page/module-list-page.component.html
@@ -1,9 +1,45 @@
 <body>
-    <h1 class="title my-5">Available Modules</h1>
-    <ol>
-        <li class="list-element">Module: <a routerLink="/Binary">Binary</a></li>
-        <li class="list-element"><a>Module:</a></li>
-        <li class="list-element">Module: <a routerLink="/NoiseMargins">Noise Margins</a> </li>
-        <li class="list-element">Module: <a routerLink="/Transistors">PMOS, NMOS, and Truth Tables</a> </li>
-    </ol>
+
+    <div class="purpose">
+        <h1 style="font-weight:bold;">Welcome to Logique a la Crabe!</h1>
+        <h2>Our goal is to teach digital logic in its simplest form. The information is presented descriptively while remaining easy 
+           <br> to understand for aspiring computer engineers. Each module teaches about its subject, then offers practice questions.
+           <br> Once you're ready, there are quizzes available to test your knowledge.
+        </h2>
+    </div>
+
+    <div class="modules">
+        <h1 style="font-weight:bold;">Available Modules</h1>
+    </div>
+    
+    <div class = "btn-group" style="width:100%">
+        <button type="button" class="btn btn-light">
+            <a class="nav-link" routerLink="/Binary">Binary Numbers</a>
+        </button>
+        <button type="button" class="btn btn-light">
+            <a class="nav-link" routerLink="/logic-gates">Logic Gates and Truth Tables</a>
+        </button>
+        <button type="button" class="btn btn-light">
+            <a class="nav-link" routerLink="/NoiseMargins">Noise Margins</a>
+        </button>
+        <button type="button" class="btn btn-light">
+            <a class="nav-link" routerLink="/transistors">NMOS and PMOS Transistors</a>
+        </button>
+    </div>
+
+    <div class="row">
+        <img src="assets/logic-gates/AND_gate.svg" alt="and_gate" style="width:150px;height:120px">
+        <img src="assets/logic-gates/Buffer_gate.svg" alt="buffer_gate" style="width:150px;height:120px">
+        <img src="assets/logic-gates/NAND_gate.svg" alt="nand_gate" style="width:150px;height:120px">
+        <img src="assets/logic-gates/NOR_gate.svg" alt="nor_gate" style="width:150px;height:120px">
+        <img src="assets/logic-gates/NOT_gate.svg" alt="not_gate" style="width:150px;height:120px">
+        <img src="assets/logic-gates/OR_gate.svg" alt="or_gate" style="width:150px;height:120px">
+        <img src="assets/logic-gates/XNOR.png" alt="xnor_gate" style="width:150px;height:120px">
+        <img src="assets/logic-gates/XOR_gate.svg" alt="xor_gate" style="width:150px;height:120px">
+    </div>
+
+    <div class = "crab">
+        <img src="assets/crab_left_claw_up.png" alt="crab mascot" style="width:400px; height:300px">
+    </div>
+
 </body>
