--- a/src/app/logic-gates-module/practice-layout/practice.component.css
+++ b/src/app/logic-gates-module/practice-layout/practice.component.css
@@ -5,6 +5,13 @@
     margin-bottom: .5in;
 }
 
+.quiz {
+    margin-top: .5in;
+    margin-left: .5in;
+    margin-right: .5in;
+    margin-bottom: .5in;
+}
+
 .btn-primary {
     background-color: darkslategrey;
     border-color: darkslategrey;
