--- a/src/app/logic-gates-module/practice-layout/practice.component.html
+++ b/src/app/logic-gates-module/practice-layout/practice.component.html
@@ -29,9 +29,9 @@
         <div>
 
         </div>
-        <div class="quiz">
-            <h2>When you're ready for a challenge click the button below!</h2>
-            <button class="btn btn-primary mt-0"><a routerLink="/logic-gates/quiz">Go for the Quiz</a></button>
-        </div>
+    </div>
+    <div class="quiz">
+        <h2>When you're ready for a challenge click the button below!</h2>
+        <button class="btn btn-primary mt-0">Go for the Quiz</button>
     </div>
 </div>
