--- a/src/app/module-list-page/module-list-page.component.css
+++ b/src/app/module-list-page/module-list-page.component.css
@@ -1,29 +1,45 @@
-.purpose{
+.purpose {
     margin-top: .5in;
     text-align: center;
 }
-.title{
+
+.title {
     text-align: center;
     font-size: 45px;
 }
-.list-element{
+
+.list-element {
     margin-top: 1%;
     font-size: 26px;
 }
+
 .btn-group button {
-    background-color: darkslategrey; 
-    border: 1px solid darkslategrey; 
-    color: white; 
+    background-color: darkslategrey;
+    border: 1px solid darkslategrey;
+    color: white;
     padding: 10px 24px;
 }
-.modules{
+
+.modules {
     text-align: center;
     margin-top: .5in;
 }
-.row{
+
+.row {
     margin-top: .5in;
     margin-left: 1.5in;
 }
-.crab{
-    text-align: center;
+
+.crab {
+    position: fixed;
+}
+
+.nav-link {
+    color: white;
+    border-bottom: 0.2vw solid transparent;
+}
+
+.nav-link:hover {
+    color: white;
+    border-bottom: 0.2vw solid white;
 }
