Fixed noise-margins button, added some comments

--- a/src/app/transistor-module/transistor-module.component.html
+++ b/src/app/transistor-module/transistor-module.component.html
@@ -85,11 +85,14 @@
     </div>
 
     <div class="figures">
-        <h3 class="figure-title">Figure 1</h3>
+        <h3 class="figure-title"><b>Figure 1</b></h3>
         <img src="/assets/transistor-module/examples/transistors.png" />
-        <h3 class="figure-title">Figure 2</h3>
+        <h3>Image credited to: https://courses.engr.illinois.edu/ece110/fa2019/content/courseNotes/files/?MOSFETs</h3>
+        <h3 class="figure-title"><b>Figure 2</b></h3>
         <img src="/assets/transistor-module/examples/576px-MOSFET_flow.png" />
-        <h3 class="figure-title">Figure 3</h3>
+        <h3>Image credited to: https://en.wikichip.org/wiki/mosfet</h3>
+        <h3 class="figure-title"><b>Figure 3</b></h3>
         <img src="/assets/transistor-module/examples/Logic-Gates-and-Truth-tables.png" />
+        <h3>Image credited to: https://instrumentationtools.com/logic-gates-and-truth-tables/</h3>
     </div>
 </body>
